# ai-image-analyzer

./: .bandit  .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  .trivyignore  ARCHITECTURE.md  AZURE_DEPLOYMENT.md  CI_CD_GUIDE.md  DEMO.md  Dockerfile  Dockerfile.hands-on  README.md  README.md.backup  REDIS_INTERVIEW_NOTES.md  STYLING_GUIDE.md  auth_hands_on.py  container_orchestration_guide.py  database_demo.py  database_demo_complete.py  demo.sh  deploy-azure.sh  dev.sh  docker-compose.yml  fastapi_auth_integration.py  fastapi_rate_limiting.py  k8s-deployment.yaml  k8s-hpa.yaml  locustfile.py  main.py  monitoring_hands_on.py  pyproject.toml  rate_limiting_hands_on.py  redis_caching_demo.py  redis_hands_on.py  requirements.txt  simple_rate_limiting.py  startup.sh  (+2 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-deploy.yml  ci-cd-old.yml  ci-cd.yml
app/: __init__.py  auth_service.py  image_analyzer.py  main.py  rate_limiter.py
deployment/azure/: README.md  cleanup.sh  deploy.sh
deployment/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.production  docker-compose.yml  nginx.conf
deployment/kubernetes/: k8s-deployment.yaml  k8s-hpa.yaml
docs/: ARCHITECTURE.md  AZURE_SETUP.md  ERROR_HANDLING.md  PRODUCTION_SETUP.md
examples/hands-on-demos/: auth_hands_on.py  container_orchestration_guide.py  database_demo.py  database_demo_complete.py  monitoring_hands_on.py  rate_limiting_hands_on.py  redis_caching_demo.py  redis_hands_on.py
frontend/: build.sh  index.html  package-lock.json  package.json  serve.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
infrastructure/azure/: main.bicep  main.dev.bicepparam  main.prod.bicepparam
infrastructure/azure/modules/: infrastructure.bicep
scripts/: setup_azure.sh  test_azure_connection.py  test_error_handling.py
src/: __init__.py
src/api/: __init__.py  main.py  routes.py
src/core/: config.py  error_config.py  error_handling.py  exceptions.py  logging.py
src/database/: config.py  init_db.py
src/models/: __init__.py  database.py  database_compatible.py  schemas.py
src/services/: __init__.py  computer_vision.py
tests/: conftest.py  test_api.py  test_models.py  test_rate_limiting.py  test_services.py
